--- a/Desktop/BrightCode/CodeTyke-772053a1b4f597099cc35a6a33bbbdd9bf78111b/src/components/button/Styles.scss
+++ b/Desktop/BrightCode/CodeTyke-772053a1b4f597099cc35a6a33bbbdd9bf78111b/src/components/button/Styles.scss
@@ -1,6 +1,7 @@
-@import '../../styles/utils/colors';
+@import "../../styles/utils/colors";
 
-.submitButton{
+.submitButton {
+  display: flex;
   text-align: center;
   color: white;
   line-height: 50px;
@@ -10,4 +11,17 @@
   background-color: $grass-blade;
   padding: 0 2em;
   cursor: pointer;
+
+  .loaderIcon {
+    animation: rotation 2s infinite linear;
+  }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 }
